@startuml "data architecture"
skinparam linetype ortho

entity Type {
    *id : int <<PK,generated>>
    ..
    ...
}

entity Port {
    *id : int <<PK,generated>>
    ..
    *local_id : string
    ..
    *kind : string
    ..
    *plane : plane
    ..
    *type_id : int <<FK>>
    ..
    ...
}
note top of Port
    (local_id,kind) unique.
end note

entity Piece{
    *id : int <<PK,generated>>
    ..
    *type_id : int <<FK>>
    ..
    root_plane : plane
    ..
    ...
}

entity Attraction {
    *attracting_piece_id : int <<PK,FK>>
    *attracting_piece_type_port_id : int <<FK>>
    ..
    *attracted_piece_id : int <<PK,FK>>
    *attracted_piece_type_port_id : int <<FK>>
    ..
    ...
}

Type ||--|{ Port
Type <-- Piece
Piece <-- Attraction
Port <-- Attraction

@enduml